[package]
name = "coingecko-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
confy = "0.6.1"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
thousands = "0.2.0"